--- a/Javascript.html
+++ b/Javascript.html
@@ -9,8 +9,10 @@ function GetUserData()
 }
 function funcao1()
 {
-alert("Eu sou um alerta de tela!");
-console.log("eu sou um alerta de console!")
+    let peso1 = parseFloat(prompt('Insira o peso da nota 1: '))
+    let peso2 = parseFloat(prompt('Insira o peso da nota 2: '))
+    let peso3 = parseFloat(prompt('Insira o peso da nota 3: '))
+    let peso4 = parseFloat(prompt('Insira o peso da nota 4: '))
 }
 </script>
 </head>
