--- a/Javascript.html
+++ b/Javascript.html
@@ -18,7 +18,7 @@ function funcao1()
 </head>
 <body>
 
-<input type="button" onclick="funcao1()" value="Exibir Alert" />
+<input type="button" onclick="funcao1()" value="informar peso" />
 
 </body>
 </html></div>
