--- a/Javascript.html
+++ b/Javascript.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <input type="button" onclick="funcao1()" value="Exibir Alert" />
+    <input type="button" onclick="funcao1()" value="Informar nota" />
 
 </body>
 
